# KnowledgeDump

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
development/: deployment.md
e2e/: app.spec.ts
playwright-report/: index.html
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: chunker.rs  db.rs  lib.rs  models.rs  vectordb.rs
src/components/: DrawPad.tsx  EditorPane.tsx  GraphView.tsx  OnboardingModal.tsx  SearchOverlay.tsx  SettingsView.tsx  Sidebar.tsx  TabBar.tsx
src/lib/: ai.test.ts  ai.ts  embeddingWorker.ts  search.test.ts  search.ts  vectorSync.ts
test-results/: .last-run.json
test-results/app-App-should-load-and-verify-basic-UI-structure-chromium/: error-context.md
